crates/keron-lang/tests/corpus/errors/check/fn_duplicate_param.keron
fn f(a: Int, a: Int): Int {
  a
}
